Finish array exercises 1 and 2

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,17 +38,31 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    let q1 = inventors.filter((inventor) => (inventor.year >= 1500 && inventor.year <= 1599));
+    console.log(q1);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    let q2 = inventors.map((inventor) => `${inventor.first} ${inventor.last}`);
+    console.log(q2);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    let q3 = inventors.sort((a, b) => a.year - b.year);
+    console.log(q3);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    let q4 = inventors.reduce((accumulator, currentInventor) => accumulator + currentInventor.passed - currentInventor.year, 0);
+    console.log(q4);
 
     // 5. Sort the inventors by years lived
+    let q5 = inventors.sort((a, b) => {
+      let ageA = a.passed - a.year;
+      let ageB = b.passed - b.year; 
+      return ageA - ageB;
+    })
+    console.log(q5);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -56,11 +70,26 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    let q7 = people.sort((a, b) => {
+      aLast = a.split(", ")[0]; 
+      bLast = b.split(", ")[0];
+      return aLast.toLowerCase() < bLast.toLowerCase() ? -1 : 1;
+    })
+    console.log(q7);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    
+    let q8 = data.reduce((accumulator, current) => {
+      if (!(current in accumulator)) { // 'in' is a good way to test property existence for objects.
+        accumulator[current] = 0;
+      }
+      accumulator[current]++;
+      return accumulator; // don't forget to return this 
+    }, {})
 
+    console.log(q8);
   </script>
 </body>
 </html>
