--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,25 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    let currentYear = new Date().getFullYear();
+    let some = people.some((person) => currentYear - person.year >= 19);
+    console.log(some);
+
     // Array.prototype.every() // is everyone 19 or older?
+    let every = people.every((person) => currentYear - person.year >= 19);
+    console.log(every);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    let find = comments.find((comment) => comment.id === 823423);
+    console.log(find);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    let findIndex = comments.findIndex((comment) => comment.id === 823423);
+    console.log(findIndex);
 
   </script>
 </body>
